--- a/AuthenticationApp/Base.lproj/Main.storyboard
+++ b/AuthenticationApp/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,98 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="first" id="BYZ-38-t0r" customClass="ViewController" customModule="AuthenticationApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOGIN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KrI-o4-RjY">
+                                <rect key="frame" x="30" y="94" width="354" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CPq-U3-jpA">
+                                <rect key="frame" x="30" y="193" width="354" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tyc-7C-Pt0">
+                                <rect key="frame" x="30" y="257" width="354" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sX6-wE-FhH">
+                                <rect key="frame" x="188" y="321" width="38" height="30"/>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="loginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1e4-Ig-dPK"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="CPq-U3-jpA" firstAttribute="top" secondItem="KrI-o4-RjY" secondAttribute="bottom" constant="60" id="BSw-CD-z3t"/>
+                            <constraint firstItem="tyc-7C-Pt0" firstAttribute="top" secondItem="CPq-U3-jpA" secondAttribute="bottom" constant="30" id="HgE-LR-VlN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tyc-7C-Pt0" secondAttribute="trailing" constant="30" id="LSi-Q4-UuA"/>
+                            <constraint firstItem="tyc-7C-Pt0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="TFH-TF-wsz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CPq-U3-jpA" secondAttribute="trailing" constant="30" id="dBV-lH-kHU"/>
+                            <constraint firstItem="KrI-o4-RjY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="eMJ-EO-QaP"/>
+                            <constraint firstItem="KrI-o4-RjY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="gJG-b8-IxK"/>
+                            <constraint firstItem="CPq-U3-jpA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="nxF-za-1hA"/>
+                            <constraint firstItem="sX6-wE-FhH" firstAttribute="top" secondItem="tyc-7C-Pt0" secondAttribute="bottom" constant="30" id="vJF-pf-QWc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KrI-o4-RjY" secondAttribute="trailing" constant="30" id="xBU-VZ-Gyv"/>
+                            <constraint firstItem="sX6-wE-FhH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yJD-3R-ai7"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="passwordTextField" destination="tyc-7C-Pt0" id="VDu-Bk-K0e"/>
+                        <outlet property="usernameTextField" destination="CPq-U3-jpA" id="mcU-wD-0fD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-57.971014492753625" y="101.78571428571428"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="6Jx-2p-eHj">
+            <objects>
+                <viewController storyboardIdentifier="second" id="1fJ-ps-Mtw" customClass="SecondViewController" customModule="AuthenticationApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uyL-nK-A3u">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HOME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwp-Pw-7ea">
+                                <rect key="frame" x="30" y="94" width="354" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sh2-kr-hbK">
+                                <rect key="frame" x="183" y="433" width="48" height="30"/>
+                                <state key="normal" title="Logout"/>
+                                <connections>
+                                    <action selector="logoutButton:" destination="DXL-we-gYU" eventType="touchUpInside" id="4RI-Os-M8n"/>
+                                    <action selector="logoutButton:" destination="1fJ-ps-Mtw" eventType="touchUpInside" id="FsL-Ea-KRb"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Sh2-kr-hbK" firstAttribute="top" secondItem="gwp-Pw-7ea" secondAttribute="bottom" constant="300" id="2GL-Sl-8T4"/>
+                            <constraint firstItem="gwp-Pw-7ea" firstAttribute="leading" secondItem="xKS-Qd-M6k" secondAttribute="leading" constant="30" id="iKt-nM-LB2"/>
+                            <constraint firstItem="xKS-Qd-M6k" firstAttribute="trailing" secondItem="gwp-Pw-7ea" secondAttribute="trailing" constant="30" id="jF7-lo-Mt7"/>
+                            <constraint firstItem="gwp-Pw-7ea" firstAttribute="top" secondItem="xKS-Qd-M6k" secondAttribute="top" constant="50" id="kXY-7d-XOU"/>
+                            <constraint firstItem="Sh2-kr-hbK" firstAttribute="centerX" secondItem="uyL-nK-A3u" secondAttribute="centerX" id="peb-3i-0s3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="xKS-Qd-M6k"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8AP-qL-0KO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="DXL-we-gYU" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="673.91304347826087" y="101.78571428571428"/>
         </scene>
     </scenes>
 </document>
